Fix layout issues in signout confirmation dialog
Previous: http://screen/9KxEK8aS8MxU3GH.png
Current: http://screen/yQaiaxW7jNiQ69B.png

Bug: 470300325, 470286724
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7277688
Auto-Submit: Monica Salama <msalama@chromium.org>
Commit-Queue: Ryan Sultanem <rsult@google.com>
Cr-Commit-Position: refs/heads/main@{#1561728}

--- a/chrome/browser/resources/signin/signout_confirmation/extensions_section.css
+++ b/chrome/browser/resources/signin/signout_confirmation/extensions_section.css
@@ -78,12 +78,13 @@
 
 .account-extension {
   align-items: center;
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: auto 1fr;
   font-weight: 500;
   gap: 8px;
   height: 36px;
   margin-inline-start: 8px;
+  margin-inline-end: calc(8px + var(--dialog-padding));
 }
 
 .item-icon-container {
@@ -102,6 +103,12 @@
   --item-icon-size: 16px;
   height: var(--item-icon-size);
   width: var(--item-icon-size);
+}
+
+.text-elide {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .custom-scrollbar::-webkit-scrollbar {
